# constructive-ms-python

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.devin/: wiki.json
proto/: area_event.proto  bus_event.proto  crash_event.proto
scripts/: gen_proto.py  patch_airsim_deps.py  run.py
settings/: airsim_settings.json
src/constructive_airsim_ms/: config.py  main.py  models.py
src/constructive_airsim_ms/agent/: llm_policy.py  move_queue.py  prompts.py  route.py
src/constructive_airsim_ms/api/: event_hub_subscriber.py  grpc_server.py  rest.py
src/constructive_airsim_ms/publishers/: area_publisher.py  bus_photo_publisher.py  crash_publisher.py  event_hub_publisher.py
src/constructive_airsim_ms/sim/: client.py  coordinates.py  environment.py  virtual_areas_client.py
tests/: test_coordinates.py  test_move_queue_clamping.py
